Changed default language

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <title>Dalton's Calculator</title>
         <link rel="stylesheet" href="C:\Users\Dalton\Documents\Internship\styles.css">
