Redid updateDisplay() method, added try-catch block for division by zero error

--- a/index.html
+++ b/index.html
@@ -65,18 +65,18 @@
                 <button type="button" class="numeral" value="3" onclick="keyPress('3')">3</button>
             </div>
             <div class="grid-item" id="add">
-                <button type="button" class="operator" onclick="keyPress('+'); updateDisplay()">+</button>
+                <button type="button" class="operator" onclick="keyPress('+')">+</button>
             </div>
 
             <!-- Grid Row 6 -->
             <div class="grid-item" id="zero">
-                <button type="button" class="numeral" value="0" onclick="keyPress(0); updateDisplay()">0</button>
+                <button type="button" class="numeral" value="0" onclick="keyPress('0')">0</button>
             </div>
             <div class="grid-item" id="decimal" >
                 <button type="button" class="numeral" onclick="keyPress('.')">.</button>
             </div>
             <div class="grid-item" id="equals">
-                <button type="button" class="operator" onclick="keyPress('='); updateDisplay()">=</button>
+                <button type="button" class="operator" onclick="keyPress('=')">=</button>
             </div>
         </div>
 
